--- a/TestPulse.SharePoint.UnitTests/TestPulse.SharePoint.UnitTests.csproj
+++ b/TestPulse.SharePoint.UnitTests/TestPulse.SharePoint.UnitTests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7742363F-C2F1-4777-BFE4-63A10F370698}</ProjectGuid>
+    <ProjectGuid>{642AF7C2-83BE-490F-9B9B-80F2AF032FF5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestPulse.AcceptanceTests</RootNamespace>
-    <AssemblyName>TestPulse.AcceptanceTests</AssemblyName>
+    <RootNamespace>TestPulse.SharePoint.UnitTests</RootNamespace>
+    <AssemblyName>TestPulse.SharePoint.UnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -37,10 +37,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
-    <Reference Include="TechTalk.SpecFlow">
-      <HintPath>..\packages\SpecFlow.1.9.0\lib\net35\TechTalk.SpecFlow.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <Choose>
     <When Condition="('$(VisualStudioVersion)' == '10.0' or '$(VisualStudioVersion)' == '') and '$(TargetFrameworkVersion)' == 'v3.5'">
@@ -55,36 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="Features\OpenPage.feature.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>OpenPage.feature</DependentUpon>
-    </Compile>
-    <Compile Include="Helper\TestHelper.cs" />
-    <Compile Include="Hooks\Events.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\TestPulse.UIDriver\TestPulse.UIDriver.csproj">
-      <Project>{790e12b7-ef85-4f39-b60d-e3e29eb9a3e8}</Project>
-      <Name>TestPulse.UIDriver</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\TestPulse\TestPulse.csproj">
-      <Project>{7c13cc6e-c32d-4886-b625-8d26f762f068}</Project>
-      <Name>TestPulse</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\" />
-    <Folder Include="Steps\" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="Features\OpenPage.feature">
-      <Generator>SpecFlowSingleFileGenerator</Generator>
-      <LastGenOutput>OpenPage.feature.cs</LastGenOutput>
-    </None>
-    <None Include="packages.config" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
